// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration Should process changing handlebars tempaltes with expiry: after modification 1`] = `
Object {
  "config": Anything,
  "data": "<html><body>Layout 2 <span>Generated 2</span></body></html>",
  "headers": Object {
    "connection": "close",
    "content-length": "59",
    "content-type": "text/html",
    "date": Anything,
  },
  "request": Anything,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`Integration Should process changing handlebars tempaltes with expiry: inital 1`] = `
Object {
  "config": Anything,
  "data": "<html><body>Layout <span>Generated</span></body></html>",
  "headers": Object {
    "connection": "close",
    "content-length": "55",
    "content-type": "text/html",
    "date": Anything,
  },
  "request": Anything,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`Integration Should process changing handlebars tempaltes with none: after modification 1`] = `
Object {
  "config": Anything,
  "data": "<html><body>Layout 2 <span>Generated 2</span></body></html>",
  "headers": Object {
    "connection": "close",
    "content-length": "59",
    "content-type": "text/html",
    "date": Anything,
  },
  "request": Anything,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`Integration Should process changing handlebars tempaltes with none: inital 1`] = `
Object {
  "config": Anything,
  "data": "<html><body>Layout <span>Generated</span></body></html>",
  "headers": Object {
    "connection": "close",
    "content-length": "55",
    "content-type": "text/html",
    "date": Anything,
  },
  "request": Anything,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`Integration Should process changing handlebars tempaltes with preload: after modification 1`] = `
Object {
  "config": Anything,
  "data": "<html><body>Layout <span>Generated</span></body></html>",
  "headers": Object {
    "connection": "close",
    "content-length": "55",
    "content-type": "text/html",
    "date": Anything,
  },
  "request": Anything,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`Integration Should process changing handlebars tempaltes with preload: inital 1`] = `
Object {
  "config": Anything,
  "data": "<html><body>Layout <span>Generated</span></body></html>",
  "headers": Object {
    "connection": "close",
    "content-length": "55",
    "content-type": "text/html",
    "date": Anything,
  },
  "request": Anything,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`Integration Should process response 1`] = `
Object {
  "config": Anything,
  "data": "<html>
  <body>
    <span>Index</span>
  </body>
</html>
",
  "headers": Object {
    "connection": "close",
    "content-length": "57",
    "content-type": "text/html",
    "date": Anything,
  },
  "request": Anything,
  "status": 200,
  "statusText": "OK",
}
`;

exports[`Integration Should process response 2`] = `
Object {
  "config": Anything,
  "data": "<html>
  <body>
    <span>name: JOHN SMITH</span>
    <span><span>has test John Smith</span>
    </span>
  </body>
</html>
",
  "headers": Object {
    "connection": "close",
    "content-length": "123",
    "content-type": "text/html",
    "date": Anything,
  },
  "request": Anything,
  "status": 201,
  "statusText": "Created",
}
`;
